# smart-servo

./: .gitignore  README.md
docs/: README.md  system_diagram.md
firmware/smart_servo_esp32/: diagram.json  platformio.ini  wokwi.toml
firmware/smart_servo_esp32/src/: main.cpp
ros2_ws/data/: latest.csv
ros2_ws/src/smart_servo_hardware/: CMakeLists.txt  package.xml  smart_servo_hardware.xml
ros2_ws/src/smart_servo_hardware/include/smart_servo_hardware/: smart_servo_system.hpp
ros2_ws/src/smart_servo_hardware/src/: smart_servo_system.cpp
ros2_ws/src/smart_servo_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/smart_servo_ros/config/: controllers.yaml
ros2_ws/src/smart_servo_ros/description/: smart_servo.urdf
ros2_ws/src/smart_servo_ros/launch/: smart_servo.launch.py  smart_servo.rviz
ros2_ws/src/smart_servo_ros/smart_servo_ros/: keyboard_node.py  logging_utils.py  plot_logs.py  rviz_visualizer.py  simulated_esp32_node.py  tcp_bridge.py
ros2_ws/src/smart_servo_ros/tests/: test_data_logging.py  test_keyboard_node.py  test_tcp_bridge.py
