<?xml version="1.0"?>
<package format="3">
  <name>smart_servo_hardware</name>
  <version>0.1.0</version>
  <description>ROS 2 Control hardware interface for the smart-servo transport topics.</description>
  <maintainer email="yousef@example.com">Yousef</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
